<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText android:id="@+id/activity_formulario_campeao_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            tools:ignore="Autofill" />

        <EditText android:id="@+id/activity_formulario_campeao_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/tipo"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText android:id="@+id/activity_formulario_campeao_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText android:id="@+id/activity_formulario_campeao_lane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/lane"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText android:id="@+id/activity_formulario_campeao_dano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/dano"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText android:id="@+id/activity_formulario_campeao_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/range"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <Button android:id="@+id/activity_formulario_aluno_botao_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/salvar"
            />

    </LinearLayout>

</ScrollView>